# MixedPlayground

./: .gitignore  README.md
C++/: .clang-format  .clang-tidy  .clang-tidy-ignore  CMakeLists.txt
C++/.cache/clangd/index/: 01-GettingStarted.cpp.CCAC336475BC9B22.idx  07-Loops.cpp.D4EDF4D688811647.idx  catch.hpp.2FC16ABBE580D396.idx  catch.hpp.E0AB9BA60873B7C4.idx  main.cpp.35095FD8647181EB.idx  test.cpp.29AEA807D93C18B4.idx
C++/Cmake/: CompilerWarnings.cmake
C++/src/: 01-GettingStarted.cpp  02-Literals.cpp  03-OperatorPrecedence.cpp  05-Arrays.cpp  06-Iterators.cpp  07-Loops.cpp  08-Metaprogramming.cpp  09-Const.cpp  10-ReturnSeveralValue.cpp  11-Polymorphism.cpp  12-References&Semantics.cpp  13-CopyvsAssignment.cpp  14-Pointers.cpp  15-Classes.cpp  16-Overloading.cpp  17-Inline.cpp  18-SpecialMemberFunctions.cpp  19-Lambdas.cpp  20-Threading.cpp  21-RuleOf0-3-5.cpp  22-AtomicTypes.cpp  4-BitManipulation.cpp  CMakeLists.txt  main.cpp
CUDA/: README.md
CUDA/CUDA_Playground/: 01-HelloWorld.cu  02-1-VectorAdditionGPU-Block.cu  02-2-VectorAdditionGPU-Thread.cu  02-3-VectorAdditionGPU-BlockAndThread.cu  02-VectorAddition.cu  03-StructuresOfArrays.cu  04-ArrayOfStructures.cu  05-MatrixTranspose.cu  06-TransposeNoBankConflict.cu  07-ImageScaling.cu  07-scrImagePgmPpmPackage.cpp  07-scrImagePgmPpmPackage.h  09-UnifiedMemory-64Align.cu  09-UnifiedMemory-DataPrefetch.cu  09-UnifiedMemory-Initialized.cu  09-UnifiedMemory.cu  CUDA_Playground.sln  CUDA_Playground.vcxproj  CUDA_Playground.vcxproj.filters  HelloWorld.cu
CUDA/Chapter1/: 01-HelloWorld.cu  02-VectorAddition.cu
